@@ -28,6 +28,7 @@ lead to a stack overflow.
 ** Fixed build issue with DEC/Compaq/HP's compiler
 ** Fixed `scm_from_complex_double' build issue on FreeBSD
 ** Fixed `alloca' build issue on FreeBSD 6
+** Make sure all tests honor `$TMPDIR'
 
 * Changes to the distribution
 
